--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Artigiano Manager Pro</title>
-    
-    <link rel="stylesheet" href="style.css?v=0.0.02">
+    <link rel="stylesheet" href="style.css?v=0.0.03">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#f2f2f7">
-    <link rel="apple-touch-icon" href="icons/icon-192.png">
-    
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -28,7 +25,7 @@
     </div>
 
     <div id="version-footer" style="position: fixed; bottom: 20px; left: 0; right: 0; text-align: center; font-family: -apple-system; font-size: 12px; color: #8e8e93; pointer-events: none; z-index: 1000;">
-        v 0.0.02
+        v 0.0.03
     </div>
 
     <style>
@@ -36,25 +33,13 @@
     </style>
 
     <script>
-        // Atualiza o relógio da barra animada em tempo real
         function atualizarRelogio() {
             const agora = new Date();
-            const timeString = agora.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
-            const el = document.getElementById('relogio-ios');
-            if(el) el.innerText = timeString;
+            document.getElementById('relogio-ios').innerText = agora.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
         }
         setInterval(atualizarRelogio, 1000);
         atualizarRelogio();
     </script>
-
-    <script type="module" src="main.js?v=0.0.02"></script>
-
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js?v=0.0.02')
-                .then(() => console.log("Service Worker v0.0.02 registrado!"))
-                .catch(err => console.log("Erro ao registrar SW:", err));
-        }
-    </script>
+    <script type="module" src="main.js?v=0.0.03"></script>
 </body>
 </html>
