--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PiZZA Master Pro</title>
+    <title>PiZZA Master v2.0.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -39,6 +39,15 @@
         }
         .dark-inventory h4 { color: white !important; }
         .dark-inventory .bg-gray-50 { background: rgba(255,255,255,0.02) !important; }
+        
+        /* Pizza Loader Animation */
+        @keyframes rotate-pizza {
+          from { transform: rotate(0deg); }
+          to { transform: rotate(360deg); }
+        }
+        .pizza-loader {
+          animation: rotate-pizza 2s linear infinite;
+        }
     </style>
 <script type="importmap">
 {
@@ -49,9 +58,9 @@
     "@google/genai": "https://esm.sh/@google/genai@^0.21.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
     "firebase/database": "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "firebase/": "https://esm.sh/firebase@^12.9.0/"
+    "react-dom/": "https://esm.sh/react-dom@^18.2.0/",
+    "react/": "https://esm.sh/react@^18.2.0/",
+    "firebase/": "https://esm.sh/firebase@^10.7.1/"
   }
 }
 </script>
